tests/baselines/reference/parserArrowFunctionExpression16(target=es6).errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,25): error TS8010: Type annotations can only be used in TypeScript files.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js (1 errors) ====
    true ? false ? (param): string => param : null : null // Not legal JS; "Unexpected token ':'" at last colon
                            ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts (0 errors) ====
    true ? false ? (param): string => param : null : null
    